--- a/main.css
+++ b/main.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css?family=Nunito:400,600&display=swap');
+
 @import "tailwindcss/base";
 
 @import "tailwindcss/components";
