--- a/bundle.css
+++ b/bundle.css
@@ -517,6 +517,10 @@ img {
   --gap-x: 0.75rem;
 }
 
+.gap-x-8{
+  --gap-x: 2rem;
+}
+
 .appearance-none{
   -webkit-appearance: none;
      -moz-appearance: none;
@@ -553,6 +557,10 @@ img {
 
 .bg-teal-200{
   background-color: #b2f5ea;
+}
+
+.bg-indigo-200{
+  background-color: #c3dafe;
 }
 
 .hover\:bg-gray-400:hover{
@@ -761,6 +769,11 @@ img {
   margin-bottom: 0.5rem;
 }
 
+.mx-2{
+  margin-left: 0.5rem;
+  margin-right: 0.5rem;
+}
+
 .mx-6{
   margin-left: 1.5rem;
   margin-right: 1.5rem;
@@ -769,6 +782,10 @@ img {
 .mx-auto{
   margin-left: auto;
   margin-right: auto;
+}
+
+.ml-0{
+  margin-left: 0;
 }
 
 .mt-1{
@@ -845,6 +862,10 @@ img {
   opacity: 0;
 }
 
+.opacity-50{
+  opacity: 0.5;
+}
+
 .group:hover .group-hover\:opacity-100{
   opacity: 1;
 }
@@ -885,6 +906,11 @@ img {
   padding-right: 0.75rem;
 }
 
+.px-4{
+  padding-left: 1rem;
+  padding-right: 1rem;
+}
+
 .pt-2{
   padding-top: 0.5rem;
 }
@@ -897,8 +923,16 @@ img {
   padding-right: 1.25rem;
 }
 
+.pt-6{
+  padding-top: 1.5rem;
+}
+
 .pt-16{
   padding-top: 4rem;
+}
+
+.pt-20{
+  padding-top: 5rem;
 }
 
 .pb-9\/16{
@@ -947,6 +981,10 @@ img {
 
 .text-left{
   text-align: left;
+}
+
+.text-black{
+  color: #000;
 }
 
 .text-white{
@@ -1009,6 +1047,10 @@ img {
   color: #1a202c;
 }
 
+.hover\:text-indigo-900:hover{
+  color: #3c366b;
+}
+
 .text-xs{
   font-size: 0.75rem;
 }
@@ -1025,8 +1067,16 @@ img {
   font-size: 1.125rem;
 }
 
+.underline{
+  text-decoration: underline;
+}
+
 .hover\:underline:hover{
   text-decoration: underline;
+}
+
+.hover\:no-underline:hover{
+  text-decoration: none;
 }
 
 .antialiased{
@@ -1090,6 +1140,10 @@ img {
 
 .w-96{
   width: 24rem;
+}
+
+.w-auto{
+  width: auto;
 }
 
 .w-full{
