Allow clicking behind header div

--- a/bundle.css
+++ b/bundle.css
@@ -1014,6 +1014,10 @@ img {
   pointer-events: none;
 }
 
+.pointer-events-auto{
+  pointer-events: auto;
+}
+
 .fixed{
   position: fixed;
 }
@@ -1088,6 +1092,10 @@ img {
 
 .text-gray-900{
   color: #1a202c;
+}
+
+.text-red-600{
+  color: #e53e3e;
 }
 
 .text-orange-400{
